pequeños cambios y sugerencias sobre el dominio